added cpu graph

--- a/conky.conf
+++ b/conky.conf
@@ -64,11 +64,14 @@ ${font}Kernel:${alignr}$kernel
 # Cpu
 ${voffset -15}
 ${color2}${execi 86400 lscpu | grep 'Model name' | cut -f 2 -d ":" | awk '{print $1,$2,$3,$4}'} @ $freq_g GHz${color}
-${voffset -10}
-01 - 04:${font} ${goto 130}${cpu cpu1}% ${goto 180}${cpu cpu2 }% ${goto 230}${cpu cpu3 }% ${goto 280}${cpu cpu4 }%
-05 - 08:${font} ${goto 130}${cpu cpu5}% ${goto 180}${cpu cpu6 }% ${goto 230}${cpu cpu7 }% ${goto 280}${cpu cpu8 }%
-09 - 12:${font} ${goto 130}${cpu cpu9}% ${goto 180}${cpu cpu10 }% ${goto 230}${cpu cpu11 }% ${goto 280}${cpu cpu12 }%
 ${voffset -15}
+${color8}${cpugraph cpu0 50,280 CCCCCC EEEEEE -t}${color}
+01 - 04:${font} ${goto 125}${cpu cpu1}% ${goto 175}${cpu cpu2 }% ${goto 225}${cpu cpu3 }% ${goto 278}${cpu cpu4 }%
+05 - 08:${font} ${goto 125}${cpu cpu5}% ${goto 175}${cpu cpu6 }% ${goto 225}${cpu cpu7 }% ${goto 278}${cpu cpu8 }%
+09 - 12:${font} ${goto 125}${cpu cpu9}% ${goto 175}${cpu cpu10 }% ${goto 225}${cpu cpu11 }% ${goto 278}${cpu cpu12 }%
+${voffset 0}
+Total ${alignr}${cpu cpu0}%
+
 
 # System Processes
 ${color1}${color3}CPU usage
