added google ping

--- a/conky.conf
+++ b/conky.conf
@@ -97,6 +97,7 @@ ${voffset -15}
 ${color2}${font1}Network${font}${color}
 ${voffset -10}
 ${font Montserrat Light:size=10}${color1}IP Address:${color}${font} ${alignr}${addr enp34s0}
+${color}google.com ${alignr}${exec ping google.com -c 1| grep -oP '(?<=time\=).*\S'}
 
 Download ${alignr}${downspeed enp34s0}
 ${color8}${downspeedgraph enp34s0 50,280 ADFF2F 32CD32 -t}${color}
