Added disk io and improved color/spacing

--- a/conky.conf
+++ b/conky.conf
@@ -10,7 +10,7 @@ conky.config ={
     -- Window Properties
     own_window = true,
     own_window_colour = '#000',
-    own_window_argb_value = 100,
+    own_window_argb_value = 50,
     own_window_argb_visual = true,
     own_window_class = 'Conky',
     own_window_type = 'desktop',
@@ -63,17 +63,17 @@ ${font}Kernel:${alignr}$kernel
 
 # Cpu
 ${voffset -15}
-${color2}${execi 86400 lscpu | grep 'Model name' | cut -f 2 -d ":" | awk '{print $1,$2,$3,$4}'} @ $freq_g GHz${color}
+${color3}${execi 86400 lscpu | grep 'Model name' | cut -f 2 -d ":" | awk '{print $1,$2,$3,$4}'} @ $freq_g GHz${color}
 ${voffset -15}
 ${color8}${cpugraph cpu0 50,280 CCCCCC EEEEEE -t}${color}
-01 - 04:${font} ${goto 125}${cpu cpu1}% ${goto 175}${cpu cpu2 }% ${goto 225}${cpu cpu3 }% ${goto 278}${cpu cpu4 }%
-05 - 08:${font} ${goto 125}${cpu cpu5}% ${goto 175}${cpu cpu6 }% ${goto 225}${cpu cpu7 }% ${goto 278}${cpu cpu8 }%
-09 - 12:${font} ${goto 125}${cpu cpu9}% ${goto 175}${cpu cpu10 }% ${goto 225}${cpu cpu11 }% ${goto 278}${cpu cpu12 }%
-${voffset 0}
-Total ${alignr}${cpu cpu0}%
-
+01 - 04:${font} ${goto 120}${cpu cpu1}% ${goto 180}${cpu cpu2 }% ${goto 240}${cpu cpu3 }% ${alignr}${cpu cpu4 }%
+05 - 08:${font} ${goto 120}${cpu cpu5}% ${goto 180}${cpu cpu6 }% ${goto 240}${cpu cpu7 }% ${alignr}${cpu cpu8 }%
+09 - 12:${font} ${goto 120}${cpu cpu9}% ${goto 180}${cpu cpu10 }% ${goto 240}${cpu cpu11 }% ${alignr}${cpu cpu12 }%
+${voffset -10}
+${color3}Total ${alignr}${cpu cpu0}%
 
 # System Processes
+${voffset -10}
 ${color1}${color3}CPU usage
 ${color1}${stippled_hr}${color}
 ${top name 1} ${alignr}${color}${top cpu 1}%
@@ -90,11 +90,11 @@ ${top_mem name 3}${alignr}${top_mem mem_res 3}
 ${top_mem name 4}${alignr}${top_mem mem_res 4}
 ${top_mem name 5}${alignr}${top_mem mem_res 5}
 
-${color1}Processes: ${color}$processes ${color1}Running: ${color}$running_processes
+${color1}Processes: ${color}$processes ${alignr}${color1}Running: ${color}$running_processes
 
 # Network
-${voffset -15}
-${color2}${font1}Network${font}${color}
+${voffset -10}
+${color3}${font1}Network${font}${color}
 ${voffset -10}
 ${font Montserrat Light:size=10}${color1}IP Address:${color}${font} ${alignr}${addr enp34s0}
 ${color}google.com ${alignr}${exec ping google.com -c 1| grep -oP '(?<=time\=).*\S'}
@@ -104,9 +104,11 @@ ${color8}${downspeedgraph enp34s0 50,280 ADFF2F 32CD32 -t}${color}
 Upload ${alignr}${upspeed enp34s0}
 ${color8}${upspeedgraph enp34s0 50,280 FF0000 8B0000 -t}${color}
 
-${color1}HDD ${goto 70}${color3}${fs_used /}${color1}${goto 200}Free:${goto 250}${color3}${fs_free /}
+${color3}HDD${color} ${fs_used /}${alignr}${fs_free /} free
 ${color9}${fs_bar /}
+${color}Disk IO ${alignr}${diskio /dev/dev/nvme0n1p5}
 
-${color1}RAM ${goto 70}${color3}$mem${color1}${goto 200}Free:${goto 250}${color3}$memeasyfree
+${voffset 0}
+${color3}RAM${color} $mem${alignr}$memeasyfree free
 ${color7}${membar}
 ]];
