updated for debian 12

--- a/conky.conf
+++ b/conky.conf
@@ -9,7 +9,7 @@ conky.config ={
 
     -- Window Properties
     own_window = true,
-    own_window_colour = '#000',
+    own_window_colour = '#000000',
     own_window_argb_value = 50,
     own_window_argb_visual = true,
     own_window_class = 'Conky',
@@ -25,8 +25,8 @@ conky.config ={
     
     -- Window Position
     alignment = 'top_right',
-    gap_x = 55,
-    gap_y = 200,
+    gap_x = 50,
+    gap_y = 180,
 
     -- Font
     font = 'DejaVu Sans Mono:size=11',
@@ -40,15 +40,15 @@ conky.config ={
     default_shade_color = '333333',
     default_outline_color = '111111',
     default_outline_color = '010101',
-    color1 = '999999',
-    color2 = 'CCCCCC',
-    color3 = 'EEEEEE',
-    color4 = '444444',
-    color5 = '555555',
-    color6 = '666666',
-    color7 = '3b71a1',
-    color8 = '000000',
-    color9 = '8B0000',
+    color1 = '#999999',
+    color2 = '#CCCCCC',
+    color3 = '#EEEEEE',
+    color4 = '#444444',
+    color5 = '#555555',
+    color6 = '#666666',
+    color7 = '#3b71a1',
+    color8 = '#000000',
+    color9 = '#8B0000',
 };
 
 
@@ -57,7 +57,7 @@ conky.text = [[
 ${alignc}${font3}${color3}${time %H:%M:%S}
 ${alignc}${font1}${time %A %d %B %Y}
 ${color6}${hr}${color}
-${font}System:${alignr}$sysname $nodename
+${font}OS:${alignr}${execi 866400 cat /etc/os-release | grep "PRETTY_NAME" | cut -f 2 -d "=" | sed 's/"//g' | awk '{print $1,$2,$3}'}
 ${font}Uptime:${alignr}$uptime_short
 ${font}Kernel:${alignr}$kernel
 
@@ -106,7 +106,7 @@ ${color8}${upspeedgraph enp34s0 50,280 FF0000 8B0000 -t}${color}
 
 ${color3}HDD${color} ${fs_used /}${alignr}${fs_free /} free
 ${color9}${fs_bar /}
-${color}Disk IO ${alignr}${diskio /dev/dev/nvme0n1p5}
+${color}Disk IO ${alignr}${diskio /dev/nvme0n1p5}
 
 ${voffset 0}
 ${color3}RAM${color} $mem${alignr}$memeasyfree free
