--- a/conky.conf
+++ b/conky.conf
@@ -1,6 +1,6 @@
 conky.config ={
     -- General Settings
-    update_interval = 1.0,
+    update_interval = 1,
     cpu_avg_samples = 2,
     net_avg_samples = 2,
     background = true,
@@ -12,7 +12,6 @@ conky.config ={
     own_window_colour = '#000000',
     own_window_argb_value = 50,
     own_window_argb_visual = true,
-    own_window_class = 'Conky',
     own_window_type = 'desktop',
     minimum_height = 920,
     minimum_width = 280,
@@ -26,7 +25,7 @@ conky.config ={
     -- Window Position
     alignment = 'top_right',
     gap_x = 50,
-    gap_y = 180,
+    gap_y = 80,
 
     -- Font
     font = 'DejaVu Sans Mono:size=11',
@@ -49,6 +48,8 @@ conky.config ={
     color7 = '#3b71a1',
     color8 = '#000000',
     color9 = '#8B0000',
+
+    lua_load = '~/.config/conky/line_graph.lua',
 };
 
 
@@ -66,9 +67,9 @@ ${voffset -15}
 ${color3}${execi 86400 lscpu | grep 'Model name' | cut -f 2 -d ":" | awk '{print $1,$2,$3,$4}'} @ $freq_g GHz${color}
 ${voffset -15}
 ${color8}${cpugraph cpu0 50,280 CCCCCC EEEEEE -t}${color}
-01 - 04:${font} ${goto 120}${cpu cpu1}% ${goto 180}${cpu cpu2 }% ${goto 240}${cpu cpu3 }% ${alignr}${cpu cpu4 }%
-05 - 08:${font} ${goto 120}${cpu cpu5}% ${goto 180}${cpu cpu6 }% ${goto 240}${cpu cpu7 }% ${alignr}${cpu cpu8 }%
-09 - 12:${font} ${goto 120}${cpu cpu9}% ${goto 180}${cpu cpu10 }% ${goto 240}${cpu cpu11 }% ${alignr}${cpu cpu12 }%
+01 - 04:${font} ${goto 120}${cpu cpu1}% ${goto 180}${cpu cpu2 }% ${goto 235}${cpu cpu3 }% ${alignr}${cpu cpu4 }%
+05 - 08:${font} ${goto 120}${cpu cpu5}% ${goto 180}${cpu cpu6 }% ${goto 235}${cpu cpu7 }% ${alignr}${cpu cpu8 }%
+09 - 12:${font} ${goto 120}${cpu cpu9}% ${goto 180}${cpu cpu10 }% ${goto 235}${cpu cpu11 }% ${alignr}${cpu cpu12 }%
 ${voffset -10}
 ${color3}Total ${alignr}${cpu cpu0}%
 
@@ -96,18 +97,20 @@ ${color1}Processes: ${color}$processes ${alignr}${color1}Running: ${color}$runni
 ${voffset -10}
 ${color3}${font1}Network${font}${color}
 ${voffset -10}
-${font Montserrat Light:size=10}${color1}IP Address:${color}${font} ${alignr}${addr enp34s0}
-${color}google.com ${alignr}${exec ping google.com -c 1| grep -oP '(?<=time\=).*\S'}
+iface${alignr}${lua getNetUp}
+ip${alignr}${lua getPrivateAddress}
+google.com${alignr}${exec ping google.com -c 1| grep -oP '(?<=time\=).*\S'}
+${lua draw 25 820}
+${voffset 60}DL ${alignr}${lua getDownloadSpeed}
+${voffset 80}UP ${alignr}${lua getUploadSpeed}
 
-Download ${alignr}${downspeed enp34s0}
-${color8}${downspeedgraph enp34s0 50,280 ADFF2F 32CD32 -t}${color}
-Upload ${alignr}${upspeed enp34s0}
-${color8}${upspeedgraph enp34s0 50,280 FF0000 8B0000 -t}${color}
-
+# HDD
+${voffset 10}
 ${color3}HDD${color} ${fs_used /}${alignr}${fs_free /} free
 ${color9}${fs_bar /}
-${color}Disk IO ${alignr}${diskio /dev/nvme0n1p5}
+${color}Disk IO ${alignr} ${diskio /dev/nvme0n1p5}
 
+# RAM
 ${voffset 0}
 ${color3}RAM${color} $mem${alignr}$memeasyfree free
 ${color7}${membar}
