Updated code to a cleaner version

--- a/conky.conf
+++ b/conky.conf
@@ -1,117 +1,71 @@
 conky.config ={
-    -- General Settings
     update_interval = 1,
-    cpu_avg_samples = 2,
-    net_avg_samples = 2,
     background = true,
-    double_buffer = true,
-    no_buffers = true,
-
-    -- Window Properties
-    own_window = true,
-    own_window_colour = '#000000',
-    own_window_argb_value = 50,
-    own_window_argb_visual = true,
-    own_window_type = 'desktop',
-    minimum_height = 920,
+    alignment = 'middle_right',
+    gap_x = 50,
+    gap_y = 0,
     minimum_width = 280,
     maximum_width = 280,
-    border_inner_margin = 15,
     border_outer_margin = 10,
-    border_width = 1,
-    draw_borders = false,
-    draw_graph_borders = true,
-    
-    -- Window Position
-    alignment = 'top_right',
-    gap_x = 50,
-    gap_y = 80,
-
-    -- Font
-    font = 'DejaVu Sans Mono:size=11',
-    font1 = 'DejaVu Sans Mono:size=13',
-    font2 = 'DejaVu Sans Mono:size=16',
-    font3 = 'DejaVu Sans Mono:size=20',
+    border_inner_margin = 15,
+    double_buffer = true,
+    no_buffers = true,
+    draw_shades = false,
+    own_window = true,
+    own_window_colour = '#d6dce5',
+    own_window_type = 'desktop',
+    font = 'Ubuntu Regular:size=11',
     use_xft = true,
-
-    -- Color settings
-    default_color = 'AAAAAA',
-    default_shade_color = '333333',
-    default_outline_color = '111111',
-    default_outline_color = '010101',
-    color1 = '#999999',
-    color2 = '#CCCCCC',
-    color3 = '#EEEEEE',
-    color4 = '#444444',
-    color5 = '#555555',
-    color6 = '#666666',
-    color7 = '#3b71a1',
-    color8 = '#000000',
-    color9 = '#8B0000',
-
-    lua_load = '~/.config/conky/line_graph.lua',
+    default_color = '#333333',
+    color1 = '#4f4f4f',
 };
 
 
 conky.text = [[
-# System
-${alignc}${font3}${color3}${time %H:%M:%S}
-${alignc}${font1}${time %A %d %B %Y}
-${color6}${hr}${color}
-${font}OS:${alignr}${execi 866400 cat /etc/os-release | grep "PRETTY_NAME" | cut -f 2 -d "=" | sed 's/"//g' | awk '{print $1,$2,$3}'}
-${font}Uptime:${alignr}$uptime_short
-${font}Kernel:${alignr}$kernel
-
-# Cpu
+OS${alignr}${execi 866400 cat /etc/os-release | grep "PRETTY_NAME" | cut -f 2 -d "=" | awk '{print $1,$2,$3}' | sed 's/\s*$//g;s/"//g'}
 ${voffset -15}
-${color3}${execi 86400 lscpu | grep 'Model name' | cut -f 2 -d ":" | awk '{print $1,$2,$3,$4}'} @ $freq_g GHz${color}
+Kernel${alignr}$kernel
 ${voffset -15}
-${color8}${cpugraph cpu0 50,280 CCCCCC EEEEEE -t}${color}
-01 - 04:${font} ${goto 120}${cpu cpu1}% ${goto 180}${cpu cpu2 }% ${goto 235}${cpu cpu3 }% ${alignr}${cpu cpu4 }%
-05 - 08:${font} ${goto 120}${cpu cpu5}% ${goto 180}${cpu cpu6 }% ${goto 235}${cpu cpu7 }% ${alignr}${cpu cpu8 }%
-09 - 12:${font} ${goto 120}${cpu cpu9}% ${goto 180}${cpu cpu10 }% ${goto 235}${cpu cpu11 }% ${alignr}${cpu cpu12 }%
-${voffset -10}
-${color3}Total ${alignr}${cpu cpu0}%
+Uptime${alignr}$uptime_short
 
-# System Processes
-${voffset -10}
-${color1}${color3}CPU usage
-${color1}${stippled_hr}${color}
-${top name 1} ${alignr}${color}${top cpu 1}%
-${top name 2} ${alignr}${color}${top cpu 2}%
-${top name 3} ${alignr}${color}${top cpu 3}%
-${top name 4} ${alignr}${color}${top cpu 4}%
-${top name 5} ${alignr}${color}${top cpu 5}%
 
-${color3}Memory Usage${color}
-${color1}${stippled_hr}${color}
+CPU ${alignr}${cpu cpu0} %
+${voffset -10}
+${color1}${cpubar 10}${color}
+
+MEM ${alignr}${memperc} %
+${voffset -10}
+${color1}${membar 10}${color}
+
+HDD ${alignr}${fs_used_perc /} %
+${voffset -10}
+${color1}${fs_bar 10 /}${color}
+
+
+NETWORK
+${voffset -10}
+${color1}${downspeedgraph enp34s0 50,280}${color}
+Download ${alignr}${downspeed enp34s0}
+${voffset 0}
+${color1}${upspeedgraph enp34s0 50,280}${color}
+Upload ${alignr}${upspeed enp34s0}
+
+
+CPU usage ${stippled_hr}${voffset 10}
+${top name 1} ${alignr}${top cpu 1}%
+${top name 2} ${alignr}${top cpu 2}%
+${top name 3} ${alignr}${top cpu 3}%
+${top name 4} ${alignr}${top cpu 4}%
+${top name 5} ${alignr}${top cpu 5}%
+
+
+Memory Usage ${stippled_hr}${voffset 10}
 ${top_mem name 1}${alignr}${top_mem mem_res 1}
 ${top_mem name 2}${alignr}${top_mem mem_res 2}
 ${top_mem name 3}${alignr}${top_mem mem_res 3}
 ${top_mem name 4}${alignr}${top_mem mem_res 4}
 ${top_mem name 5}${alignr}${top_mem mem_res 5}
 
-${color1}Processes: ${color}$processes ${alignr}${color1}Running: ${color}$running_processes
 
-# Network
-${voffset -10}
-${color3}${font1}Network${font}${color}
-${voffset -10}
-iface${alignr}${lua getNetUp}
-ip${alignr}${lua getPrivateAddress}
-google.com${alignr}${exec ping google.com -c 1| grep -oP '(?<=time\=).*\S'}
-${lua draw 25 820}
-${voffset 60}DL ${alignr}${lua getDownloadSpeed}
-${voffset 80}UP ${alignr}${lua getUploadSpeed}
-
-# HDD
-${voffset 10}
-${color3}HDD${color} ${fs_used /}${alignr}${fs_free /} free
-${color9}${fs_bar /}
-${color}Disk IO ${alignr} ${diskio /dev/nvme0n1p5}
-
-# RAM
-${voffset 0}
-${color3}RAM${color} $mem${alignr}$memeasyfree free
-${color7}${membar}
+Processes: $processes ${alignr}Running: $running_processes
 ]];
